Enable waiting for web console creation (#74)
* wait for web console deployment

* Implement runspace provider in the other impl classes

* Set initial state of the console pod to creating

* wait for the endpoint

* get newly create pod

* get endpoint

* add missing closing bracket

* increase log level

* allow for errors from WaitCreateCompletion

* wait for pod creation method

* small refactor

* fix web console removal

* wait for nginx reload event

* read events for all namespaces

* skip time check

* synchronously wait for console creation

* configure logging

* log every found events

* log events

* re-arrage logger config

* remove label filter

* dump events

* list namespaced events

* cast exception

* retain old behaiviour

* add needed configuration

* addressing review issues

* addressing review comments

* bump jsonsubtypes

* bump nlog

---------
